[tool.poetry]
name = "euterpe"
version = "0.2.0"
description = ""
authors = ["Brice Santus <brice.santus@proton.me>"]
readme = "README.md"
packages = [{include = "euterpe"}]

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.23.2"
fastapi = "^0.103.1"
sqlalchemy = "^2.0.20"
typer = {version = "^0.9.0", extras = ["all"]}
spotipy = "^2.23.0"
spidev = "^3.6"
mfrc522 = "^0.0.7"


[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
pdbpp = "^0.10.3"
isort = "^5.12.0"
pylint = "^2.17.5"


[tool.poetry.group.semver.dependencies]
python-semantic-release = "^8.1.1"

[tool.black]
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | build
    | dist
  )/
)
'''
line-length = 120
target-version = ['py310']

[tool.isort]
py_version = 310
line_length = 120
profile = "black"

[tool.semantic_release]
version_variable = "euterpe/__init__.py:__version__"
version_toml = ["pyproject.toml:tool.poetry.version"]
version_source = "tag"
commit_message = "{version} [skip ci]" # skip triggering ci pipelines for version commits
branch = "main"
upload_to_pypi = true
upload_to_release = false
build_command = "poetry build"
hvcs = "github"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
